fix #185 Fix alignment of permissions icon and the border below it..

--- a/assets/sass/partials/_globals.scss
+++ b/assets/sass/partials/_globals.scss
@@ -1539,3 +1539,12 @@ a.button {
     border-radius: 10px;
   }
 }
+.warn-message-cont {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+.warn-message {
+  margin: 0;
+  margin-left: 10px;
+}
